# inverse-animation-editing

./: README.md  a.txt  a2.txt  b.txt  b2.txt  scene.txt  test.txt  test2.txt
Assets/: DLLScript.cs
Assets/Models/: ClothMaterial.mat
Assets/Scenes/: testScene.unity
Assets/Scripts/: Fixer.cs  LibraryInterface.cs  SimulationManager.cs  SimulationObject.cs
DifferentiablePhysicsEngine/: CMakeLists.txt  DifferentiablePhysicsEngine.sln  setup.py
DifferentiablePhysicsEngine/DifferentiablePhysicsEngine/: DebugHelper.cpp  DebugHelper.h  DifferentiablePhysicsEngine.vcxproj  DifferentiablePhysicsEngine.vcxproj.filters  Face.h  Node.h  Object.cpp  Object.h  PhysicsManager.cpp  PhysicsManager.h  PythonInterface.cpp  Spring.h  dllmain.cpp  packages.config
Logs/: ApiUpdaterCheck.txt
ProjectSettings/: ProjectSettings.asset
Python/: DebugHelper.py  Optimizer.py  OptimizerForUnity.py  SimulationTimes.txt  Test1.py  Test2.py  backup.py  hello.py  scene.txt  taskDistributer.py  test  test1.txt
Python/Tasks/: tasks.txt
UnityDLL/: .gitignore  CMakeLists.txt  PythonSolution.lnk  UnityDLL.cp310-win_amd64.pyd  setup.py
UnityDLL/UnityDLL/: Collider.cpp  Collider.h  DebugHelper.cpp  DebugHelper.h  Face.cpp  Face.h  Fixer.cpp  Fixer.h  Node.cpp  Node.h  Object.cpp  Object.h  PhysicsManager.cpp  PhysicsManager.h  PythonInterface.cpp  Spring.cpp  Spring.h  Types.h  UnityDLL.vcxproj  UnityDLL.vcxproj.filters  dllmain.cpp  packages.config
UnityDLL/UnityDLL.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
UnityDLL/UnityDLL/x64/Debug/: UnityDLL.dll.recipe  UnityDLL.ilk  vc142.idb
UnityDLL/UnityDLL/x64/Debug/UnityDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnityDLL.lastbuildstate  UnityDLL.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
UnityDLL/UnityDLL/x64/Release/: UnityDLL.dll.recipe  UnityDLL.iobj  UnityDLL.ipdb
UnityDLL/UnityDLL/x64/Release/UnityDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnityDLL.lastbuildstate  UnityDLL.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
UnityDLL/UnityDLLExample/: Node.cpp  Node.h  Object.cpp  Object.h  Spring.cpp  Spring.h  Types.h  UnityDLLExample.vcxproj  UnityDLLExample.vcxproj.filters  dllmain.cpp
UnityDLL/UnityDLLExample/x64/Release/: UnityDLL.dll.recipe  UnityDLL.iobj  UnityDLL.ipdb  UnityDLLExample.iobj  UnityDLLExample.ipdb
UnityDLL/UnityDLLExample/x64/Release/UnityDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnityDLL.lastbuildstate  UnityDLL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
UnityDLL/UnityDLLExample/x64/Release/UnityDLLExample.tlog/: CL.read.1.tlog  link.command.1.tlog
UnityDLL/x64/Debug/: UnityDLL.exp  UnityDLL.lib  testScene.unity - Acceso directo.lnk
UnityDLL/x64/Release/: Assets - Acceso directo.lnk  UnityDLL.exp  UnityDLL.lib  testScene.unity - Acceso directo.lnk
UnityDLLExample/UnityDLLExample/: Node.cpp  Node.h  Object.cpp  Object.h  Types.h  UnityDLLExample.vcxproj  UnityDLLExample.vcxproj.filters  dllmain.cpp
UnityDLLExample/UnityDLLExample/Release/: UnityDLLExample.dll.recipe
UnityDLLExample/x64/Release/: Assets - Acceso directo.lnk  UnityDLLExample.exp  UnityDLLExample.lib
UnityProject/: Assetsscene.txt  Forces.txt  SimulationTimes.txt  backstep.txt  forcesBig.txt  scene.txt  times.txt  timesBig.txt
UnityProject/Assets/: Optimizer.cs  PlaneGenerator.cs  Sky.mat  scene.txt  scene_optimized.txt
UnityProject/Assets/Files/: .txt  corners.txt  flag.txt  flag_noWind.txt  side.txt
UnityProject/Assets/Models/: ClothMaterial.mat  ClothMaterialTransparent.mat  UniversalRenderPipelineAsset.asset  bigPlane.fbx  quad_horizontal.fbx
UnityProject/Assets/Prefabs/: Plane.prefab  Sphere.prefab
UnityProject/Assets/Scenes/: corners.unity  flag.unity  side.unity  testScene.unity
UnityProject/Assets/Scripts/: Edge.cs  Fixer.cs  Optimizer.cs  (+6 more)
UnityProject/Logs/: ApiUpdaterCheck.txt
UnityProject/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
UnityProject/UserSettings/: EditorUserSettings.asset
(+60 files in other folders)
